# discord_channel_bot

./: .gitignore  Cargo.toml  Config.toml  README.md
src/: config.rs  embed.rs  main.rs  utils.rs
src/commands/: create.rs  delete.rs  description.rs  mod.rs  rename.rs  updatelist.rs
